--- a/src/index.css
+++ b/src/index.css
@@ -37,4 +37,78 @@ html {
   height: 100%;
   line-height: 1;
 }
-
+/*Fonts*/
+/*Lato*/
+@font-face {
+  font-family: 'Lato';
+  src: url("./assets/fonts/Lato/Lato-Light.ttf") format("truetype"),
+  url("./assets/fonts/Lato/Lato-Light.woff") format("woff"),
+  url("./assets/fonts/Lato/Lato-Light.woff2") format("woff2");
+  font-weight: 300;  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Lato';
+  src: url("./assets/fonts/Lato/Lato-Regular.ttf") format("truetype"),
+  url("./assets/fonts/Lato/Lato-Regular.woff") format("woff"),
+  url("./assets/fonts/Lato/Lato-Regular.woff2") format("woff2");
+  font-weight: 400;  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Lato';
+  src: url("./assets/fonts/Lato/Lato-Bold.ttf") format("truetype"),
+  url("./assets/fonts/Lato/Lato-Bold.woff") format("woff"),
+  url("./assets/fonts/Lato/Lato-Bold.woff2") format("woff2");
+  font-weight: 700;  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Lato';
+  src: url("./assets/fonts/Lato/Lato-Black.ttf") format("truetype"),
+  url("./assets/fonts/Lato/Lato-Black.woff") format("woff"),
+  url("./assets/fonts/Lato/Lato-Black.woff2") format("woff2");
+  font-weight: 900;  font-style: normal;
+  font-display: swap;
+}
+/*OpenSans*/
+@font-face {
+  font-family: 'OpenSans';
+  src: url("./assets/fonts/OpenSans/OpenSans-Light.ttf") format("truetype"),
+  url("./assets/fonts/OpenSans/OpenSans-Light.woff") format("woff"),
+  url("./assets/fonts/OpenSans/OpenSans-Light.woff2") format("woff2");
+  font-weight: 300;  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'OpenSans';
+  src: url("./assets/fonts/OpenSans/OpenSans-Regular.ttf") format("truetype"),
+  url("./assets/fonts/OpenSans/OpenSans-Regular.woff") format("woff"),
+  url("./assets/fonts/OpenSans/OpenSans-Regular.woff2") format("woff2");
+  font-weight: 400;  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'OpenSans';
+  src: url("./assets/fonts/OpenSans/OpenSans-Medium.ttf") format("truetype"),
+  url("./assets/fonts/OpenSans/OpenSans-Medium.woff") format("woff"),
+  url("./assets/fonts/OpenSans/OpenSans-Medium.woff2") format("woff2");
+  font-weight: 500;  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'OpenSans';
+  src: url("./assets/fonts/OpenSans/OpenSans-SemiBold.ttf") format("truetype"),
+  url("./assets/fonts/OpenSans/OpenSans-SemiBold.woff") format("woff"),
+  url("./assets/fonts/OpenSans/OpenSans-SemiBold.woff2") format("woff2");
+  font-weight: 600;  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'OpenSans';
+  src: url("./assets/fonts/OpenSans/OpenSans-Bold.ttf") format("truetype"),
+  url("./assets/fonts/OpenSans/OpenSans-Bold.woff") format("woff"),
+  url("./assets/fonts/OpenSans/OpenSans-Bold.woff2") format("woff2");
+  font-weight: 700;  font-style: normal;
+  font-display: swap;
+}
